# ai-pr-review

./: README.md  pyproject.toml
src/git_review/: review.py
